Stagging Enviroment .env db url change, AdminController jwt secret change, userController jwt secret change

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-DB_URI=mongodb://localhost/nammabadavane
+DB_URI=mongodb+srv://nammabadavane13:NammaBadavane13@nammabadavane.oearh.mongodb.net/nammabadavane?retryWrites=true&w=majority
 JWT_LOCAL_SECRET=NammaBadavane13@2021,./;
 JWT_ADMIN_SECRET=NammaBadavane13Admin@2021,./;
 TXT_LOCAL_API_KEY=J1deP6370Tw-HxKbqH1nkHVmizMnK82LWgbAPOlGQM
